frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root, [data-theme="crateria"] {
  --animation-speed: 1000ms;
  --animation-speed-fast: 250ms;
  --bg-color: #181524;
  --text-color: #d3cce3;
  
  --default-cell-bg-color: #1d182e;
  --default-cell-border-color: #42385a;
  --default-cell-text-color: #d3cce3;
  
  --correct-cell-bg-color: #3b82f6;
  --present-cell-bg-color: #a855f7;
  --absent-cell-bg-color: #4b5563;
  
  --key-default-bg: #524775;
  --key-default-hover-bg: #6c5e9c;
  --key-default-active-bg: #3d335c;
  --key-default-text: #ffffff;
  
  --key-correct-bg: #3b82f6;
  --key-present-bg: #a855f7;
  --key-absent-bg: #1a222e;
  --key-state-text: #ffffff;

  --modal-bg: #1d182e;
  --modal-text: #d3cce3;
  --modal-desc: #8e81ac;
  --modal-border: #42385a;
}

[data-theme="brinstar"] {
  --bg-color: #0c1a10;
  --text-color: #a3e635;
  
  --default-cell-bg-color: #112417;
  --default-cell-border-color: #22543d;
  --default-cell-text-color: #a3e635;
  
  --correct-cell-bg-color: #10b981;
  --present-cell-bg-color: #eab308;
  --absent-cell-bg-color: #27272a;
  
  --key-default-bg: #356b49;
  --key-default-hover-bg: #478e63;
  --key-default-active-bg: #254e35;
  --key-default-text: #ffffff;
  
  --key-correct-bg: #10b981;
  --key-present-bg: #eab308;
  --key-absent-bg: #111d14;
  --key-state-text: #ffffff;

  --modal-bg: #112417;
  --modal-text: #a3e635;
  --modal-desc: #4ade80;
  --modal-border: #22543d;
}

[data-theme="norfair"] {
  --bg-color: #1a0502;
  --text-color: #fde047;
  
  --default-cell-bg-color: #280a04;
  --default-cell-border-color: #5c1305;
  --default-cell-text-color: #fde047;
  
  --correct-cell-bg-color: #ef4444;
  --present-cell-bg-color: #f97316;
  --absent-cell-bg-color: #450a0a;
  
  --key-default-bg: #8c2e1f;
  --key-default-hover-bg: #aa3c2b;
  --key-default-active-bg: #6b2114;
  --key-default-text: #ffffff;
  
  --key-correct-bg: #ef4444;
  --key-present-bg: #f97316;
  --key-absent-bg: #210a07;
  --key-state-text: #ffffff;

  --modal-bg: #280a04;
  --modal-text: #fde047;
  --modal-desc: #f87171;
  --modal-border: #5c1305;
}

[data-theme="wrecked_ship"] {
  --bg-color: #0f091a;
  --text-color: #a5f3fc;
  
  --default-cell-bg-color: #180e29;
  --default-cell-border-color: #3b2263;
  --default-cell-text-color: #a5f3fc;
  
  --correct-cell-bg-color: #06b6d4;
  --present-cell-bg-color: #d946ef;
  --absent-cell-bg-color: #475569;
  
  --key-default-bg: #4c3078;
  --key-default-hover-bg: #64409c;
  --key-default-active-bg: #382359;
  --key-default-text: #ffffff;
  
  --key-correct-bg: #06b6d4;
  --key-present-bg: #d946ef;
  --key-absent-bg: #140e21;
  --key-state-text: #ffffff;

  --modal-bg: #180e29;
  --modal-text: #a5f3fc;
  --modal-desc: #c084fc;
  --modal-border: #3b2263;
}

[data-theme="maridia"] {
  --bg-color: #051d2d;
  --text-color: #2dd4bf;
  
  --default-cell-bg-color: #092c42;
  --default-cell-border-color: #114c70;
  --default-cell-text-color: #2dd4bf;
  
  --correct-cell-bg-color: #0ea5e9;
  --present-cell-bg-color: #eab308;
  --absent-cell-bg-color: #334155;
  
  --key-default-bg: #1d6e9f;
  --key-default-hover-bg: #278abd;
  --key-default-active-bg: #13537a;
  --key-default-text: #ffffff;
  
  --key-correct-bg: #0ea5e9;
  --key-present-bg: #eab308;
  --key-absent-bg: #0a1121;
  --key-state-text: #ffffff;

  --modal-bg: #092c42;
  --modal-text: #2dd4bf;
  --modal-desc: #38bdf8;
  --modal-border: #114c70;
}

[data-theme="tourian"] {
  --bg-color: #081012;
  --text-color: #22c55e;
  
  --default-cell-bg-color: #0d1d21;
  --default-cell-border-color: #1d3d45;
  --default-cell-text-color: #22c55e;
  
  --correct-cell-bg-color: #22c55e;
  --present-cell-bg-color: #ef4444;
  --absent-cell-bg-color: #374151;
  
  --key-default-bg: #2e5c66;
  --key-default-hover-bg: #3e7a87;
  --key-default-active-bg: #1c3c42;
  --key-default-text: #ffffff;
  
  --key-correct-bg: #22c55e;
  --key-present-bg: #ef4444;
  --key-absent-bg: #0f2118;
  --key-state-text: #ffffff;

  --modal-bg: #0d1d21;
  --modal-text: #22c55e;
  --modal-desc: #34d399;
  --modal-border: #1d3d45;
}

.cell-fill-animation {
  animation: onTypeCell linear;
  animation-duration: 0.35s;
}

.cell-reveal {
  animation-duration: 0.35s;
  animation-timing-function: linear;
  animation-fill-mode: backwards;
}

.cell-reveal.absent {
  animation-name: revealAbsentCharCell;
}

.cell-reveal.correct {
  animation-name: revealCorrectCharCell;
}

.cell-reveal.present {
  animation-name: revealPresentCharCell;
}

.cell-reveal > .letter-container {
  animation: offsetLetterFlip 0.35s linear;
  animation-fill-mode: backwards;
}

svg.cursor-pointer {
  transition: all var(--animation-speed-fast);
}

svg.cursor-pointer:hover {
  transform: scale(1.2);
}

.jiggle {
  animation: jiggle linear;
  animation-duration: var(--animation-speed-fast);
}

.navbar {
  margin-bottom: 2%;
}

.navbar-content {
  display: flex;
  height: 3rem;
  align-items: center;
  justify-content: space-between;
}

.right-icons {
  display: flex;
}

@keyframes revealAbsentCharCell {
  0% {
    transform: rotateX(0deg);
    background-color: var(--default-cell-bg-color);
    border-color: var(--default-cell-border-color);
    color: var(--default-cell-text-color);
  }
  50% {
    background-color: var(--default-cell-bg-color);
    border-color: var(--default-cell-border-color);
    color: var(--default-cell-text-color);
  }
  50.1% {
    background-color: var(--absent-cell-bg-color);
    border-color: var(--absent-cell-bg-color);
  }
  100% {
    transform: rotateX(180deg);
  }
}
/* ... */

